# openMental

./: .eslintrc.json  .gitignore  LICENSE  README.md  build.sh  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  requirements.txt  run_tests.py  server.ts  sonar-project.properties  start-servers.sh  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
.github/: pull_request_template.md
.github/workflows/: build.yml  client-coverage.yml  coverage.yml  python-tests.yml  server-coverage.yml  sonar.yml  test-coverage.yml
.husky/: pre-commit
api/: config.py  connectors.py  index.py  index_reader.py  knowledge_index.py  main.py  models.py  script.chat.py  test_index.py  test_upload_manager.py  upload.py  upload_manager.py
api/__test__/: test_upload_manager.py
api/agents/: CitationAgent.py
api/engine/: CitationEngine.py
api/legacy/: config.py  connectors.py  index_reader.py  knowledge_index.py
api/models/: models.py
api/private_scripts/: script.chat.py
api/router/: qa.py  source.py
api/storage_manager/: Storage.py  __init__.py  util.py
api/upload_manager/: __init__.py  upload_manager.py
app/: layout.tsx  page.tsx  types.ts
app/api/: index.py  request.type.ts  test_index.py  type.ts
app/api/basic/citation/[id]/: route.ts
app/api/basic/copilotkit/: route.ts
app/api/basic/qa/: route.ts
app/api/basic/sources/[id]/: route.ts
app/api/basic/summary/: route.ts
app/api/basic/upload/: route.ts
app/api/basic/upload/filesys/: route.ts
app/api/copilotkit/: route.ts
app/api/qa/: route.ts
app/api/sources/: route.ts
app/api/sources/[id]/: route.ts
app/api/upload/: route.ts
app/api/upload/vectordb/: route.ts
app/components/: Application.tsx  Citation.tsx  Task.tsx  TasksList.tsx
app/components/sources/: SourceList.tsx  index.ts
app/components/sources/hooks/: use-source-delete.tsx  use-source-detail.tsx  use-sources.tsx
app/components/ui/: dialog.tsx
app/controllers/: core.ts  fileManagementController.ts
app/dao/: knowledgeIndex.ts  parser.ts  utils.server.ts
app/dao/scripts/: psql_script.ts  script_2.ts
app/lib/: default-tasks.ts
app/lib/__tests__/: llamaindex.test.ts
app/lib/hooks/: use-audit.tsx  use-sources.tsx  use-tasks.tsx
components/: AddTodo.tsx  Task.tsx  TasksList.tsx  document-qa.tsx
components/sources/: AddSource.tsx  SourceList.tsx  SourceViewer.tsx  UploadSource.tsx  index.ts
lib/: extractor.ts  tasks.types.ts  utils.server.ts
lib/__tests__/: llamaindex.test.ts
lib/dao/: indexController.ts  vectorIndex.ts
lib/dao/scripts/: script_1.ts  script_2.ts
lib/hooks/: use-sources.tsx  use-tasks.tsx
lib/server/: utils.server.ts
lib/server/__tests__/: llamaindex.test.ts
public/: test1.txt  test2.txt
public/uploads/: Boston.txt  Chicago.txt  Seattle.txt  Toronto.txt  paul_graham_essay.txt  paul_graham_yc.txt  sam_altman_essay.txt  sam_altman_speech.txt
script/: start-server.sh
scripts/: core.ts
server/: requirements.txt
server/app/: main.py
src/: qaServer.test.ts  qaServer.ts
